--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -5,5 +5,13 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+
 @using MoneyMap
 @using MoneyMap.Components
+@using MoneyMap.Models
+@using MoneyMap.Services
+@using MudBlazor
+
+@*import NavigationManager*@
+@inject NavigationManager Nav
+
