--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,17 +1,51 @@
 ﻿@inherits LayoutComponentBase
+@using MoneyMap.Models
+@inject NavigationManager Nav
+@* Required *@
+<MudThemeProvider />
+<MudPopoverProvider />
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
 
-        <article class="content px-4">
+<MudLayout>
+    <MudAppBar Elevation="1">
+        <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
+        <MudText Typo="Typo.h5" Class="ml-3">Money Map</MudText>
+        <MudSpacer />
+        <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />
+    </MudAppBar>
+    <MudDrawer @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
+      @if(!Login()){
+
+        <MudPaper Width="250px" Elevation="0" Class="py-1">
+            <MudNavMenu Margin="Margin.Dense" Color="Color.Warning">
+                <MudNavLink Href="/dashboard">Dashboard</MudNavLink>
+                <MudNavLink Match="NavLinkMatch.Prefix" Href="/Inflow">Inflow</MudNavLink>
+                <MudNavLink Match="NavLinkMatch.Prefix" Href="/transaction">Transaction</MudNavLink>
+                <MudNavLink Match="NavLinkMatch.Prefix" Href="/outflow">Outflow</MudNavLink>
+                <MudNavLink Match="NavLinkMatch.Prefix" Href="/debts">Debts</MudNavLink>
+                <MudNavLink Match="NavLinkMatch.Prefix" Href="/transactionlist">Transaction List</MudNavLink>
+            </MudNavMenu>
+        </MudPaper>
+      }
+    </MudDrawer>
+    <MudMainContent>
+        <CascadingValue Value="@_globalState">
             @Body
-        </article>
-    </main>
-</div>
+        </CascadingValue>
+    </MudMainContent>
+</MudLayout>
+@code {
+    bool _drawerOpen = true;
+
+    void DrawerToggle()
+    {
+        _drawerOpen = !_drawerOpen;
+    }
+    private bool Login()
+    {
+        return Nav.Uri.EndsWith("/login", StringComparison.OrdinalIgnoreCase);
+    }
+
+   
+}
